--- a/MiniCraft/.classpath
+++ b/MiniCraft/.classpath
@@ -47,5 +47,7 @@
 	<classpathentry kind="lib" path="lib/nifty.jar"/>
 	<classpathentry kind="lib" path="lib/simple.jar"/>
 	<classpathentry kind="lib" path="lib/xpp3.jar"/>
+	<classpathentry kind="lib" path="lib/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/junit-4.13.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
