--- a/MiniCraft/.classpath
+++ b/MiniCraft/.classpath
@@ -49,5 +49,9 @@
 	<classpathentry kind="lib" path="lib/xpp3.jar"/>
 	<classpathentry kind="lib" path="lib/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="lib" path="lib/junit-4.13.jar"/>
+	<classpathentry kind="lib" path="lib/guava-28.2-jre.jar"/>
+	<classpathentry kind="lib" path="lib/lemur-1.13.0.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-api-1.7.25.jar"/>
+	<classpathentry kind="lib" path="lib/groovy-all-2.4.15.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
